# chippy

./: .gitignore  CMakeLists.txt
include/: Controller.hpp  Emulator.hpp  Log.hpp  Ops.hpp  cpu.hpp  screen.hpp
src/: CMakeLists.txt  Controller.cpp  Emulator.cpp  cpu.cpp  cpu.hpp  main.cpp  screen.cpp  screen.hpp
tests/: CMakeLists.txt  opcode_test.cpp
